<?xml version="1.0"?>
<package format="3">
  <name>freehicle</name>
  <version>0.0.0</version>
  <description>The main freehicle package</description>
  <maintainer email="vuwij@me.com">Jason Wang</maintainer>
  <license>BSD</license>
  <author email="vuwij@me.com">Jason Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>freehicle_description</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
