<?xml version="1.0"?>
<package format="3">
  <name>freehicle_description</name>
  <version>0.0.0</version>
  <description>The freehicle_description package</description>
  <maintainer email="vuwij@me.com">Jason Wang</maintainer>
  <license>BSD</license>
  <author email="vuwij@me.com">Jason Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
